--- a/final-product/index.html
+++ b/final-product/index.html
@@ -1,11 +1,15 @@
 <head>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script src="carpark-library.js"></script>
-  <script src="carpark-logic.js"></script>
-  <link rel="stylesheet" type="text/css" href="carpark-style.css"></link>
 </head>
 
 <body>
   <h1>Nearest Carpark Availability</h1>
   <input id="locationInput" placeholder="Enter a location">
+
+  <div id="carparkInfo"></div>
 </body>
+
+<script src="carpark-library.js"></script>
+<script src="carpark-logic.js"></script>
+<link rel="stylesheet" type="text/css" href="carpark-style.css"></link>
+  
