--- a/student-folder/index.html
+++ b/student-folder/index.html
@@ -1,8 +1,14 @@
+<head>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+</head>
+
 <body>
     <h1>Nearest Carpark Availability</h1>
-    <input id='locationInput' placeholder="Enter a location">
+    <input placeholder="Enter a location" id="locationInput">
 
-    <div id='carparkInfo'></div>
+    <div id="carparkInfo"></div>
 </body>
 
-<script src='carpark-logic.js'></script>
+<script src="carpark-logic.js"></script>
+<script src="carpark-library.js"></script>
+<link rel="stylesheet" type="text/css" href="carpark-style.css"></link>
